--- a/app/src/main/res/layout/activity_timeline_tweet.xml
+++ b/app/src/main/res/layout/activity_timeline_tweet.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/ivTweeter"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/tvRetweetedByUser"
         />
@@ -26,6 +26,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:orientation="vertical"
+        android:paddingLeft="6dp"
         >
 
         <RelativeLayout
@@ -82,13 +83,20 @@
             android:orientation="horizontal"
             >
 
-            <ImageView
-                android:id="@+id/ivReplyToTweetIcon"
-                android:src="@drawable/ic_reply_action"
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:layout_width="22dp"
-                android:layout_height="20dp"
-                />
+                >
+                <ImageView
+                    android:id="@+id/ivReplyToTweetIcon"
+                    android:src="@drawable/ic_reply_action"
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="22dp"
+                    android:layout_height="20dp"
+                    />
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
