--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,12 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="counterText">
+        <item name="android:textColor">@color/purple</item>
+    </style>
+
+    <style name="counterOverride">
+        <item name="android:textColor">@color/red</item>
+    </style>
+
 </resources>
