--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <item name="blue" type="color">#FF33B5E5</item>
     <item name="composeBackground" type="color">#cfdad9</item>
     <item name="darkGrey" type="color">#9e9e9e</item>
-    <item name="orange" type="color">#FFFFBB33</item>
+    <item name="teal" type="color">#FF009688</item>
     <item name="red" type="color">#FFFF4444</item>
     <item name="purple" type="color">#aa5353cc</item>
 </resources>
