--- a/app/src/main/res/layout/detail_tweet_image.xml
+++ b/app/src/main/res/layout/detail_tweet_image.xml
@@ -8,15 +8,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="4dp"
-        android:paddingTop="4dp"
         android:src="@drawable/horizontal_divider" />
 
     <ImageView
         android:id="@+id/image_ivTweetImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
         android:layout_below="@id/image_tweetDivider"
-        android:paddingBottom="4dp"
         android:paddingTop="4dp"
         android:scaleType="fitXY" />
 
