removing references to died package

--- a/app/src/main/res/layout/activity_tweet_timeline.xml
+++ b/app/src/main/res/layout/activity_tweet_timeline.xml
@@ -67,7 +67,7 @@
 
         </RelativeLayout>
 
-        <com.adil.apps.twitter.extensions.LinkifiedTextView
+        <com.codepath.apps.twitter.extensions.LinkifiedTextView
             android:id="@+id/tvTweetText"
             android:text="Here goes your tweet. Enjoy #tag"
             android:layout_width="match_parent"
