--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="blue" type="color">#FF33B5E5</item>
+    <item name="twitterBlue" type="color">#55ACEE</item>
     <item name="composeBackground" type="color">#cfdad9</item>
     <item name="darkGrey" type="color">#9e9e9e</item>
     <item name="teal" type="color">#FF009688</item>
     <item name="red" type="color">#FFFF4444</item>
     <item name="purple" type="color">#aa5353cc</item>
+    <item name="white" type="color">#ffffff</item>
 </resources>
