--- a/app/src/main/res/layout/activity_tweet_detail.xml
+++ b/app/src/main/res/layout/activity_tweet_detail.xml
@@ -24,6 +24,7 @@
                 android:layout_alignParentStart="true"
                 android:paddingLeft="4dp"
                 android:paddingRight="4dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/ic_launcher" />
 
             <LinearLayout
@@ -41,8 +42,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="bottom"
-                    android:text="User name"
-                    android:textStyle="bold" />
+                    style="@style/usernameText"
+                    />
 
                 <TextView
                     android:id="@+id/detail_tvScreenName"
@@ -50,7 +51,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="top"
-                    android:text="\@screenname" />
+                    style="@style/screennameText"
+                    />
             </LinearLayout>
         </RelativeLayout>
 
