--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <item name="twitterBlue" type="color">#55ACEE</item>
     <item name="composeBackground" type="color">#cfdad9</item>
     <item name="darkGrey" type="color">#9e9e9e</item>
+    <item name="textGrey" type="color">#212121</item>
     <item name="teal" type="color">#FF009688</item>
     <item name="red" type="color">#FFFF4444</item>
     <item name="purple" type="color">#aa5353cc</item>
