--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -7,6 +7,7 @@
     android:layout_gravity="fill_horizontal"
     android:background="@color/twitterBlue"
     android:minHeight="?attr/actionBarSize"
+    android:fitsSystemWindows="true"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
     <RelativeLayout
