--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="blue" type="color">#FF33B5E5</item>
     <item name="twitterBlue" type="color">#55ACEE</item>
     <item name="composeBackground" type="color">#cfdad9</item>
     <item name="darkGrey" type="color">#9e9e9e</item>
@@ -9,4 +8,7 @@
     <item name="red" type="color">#FFFF4444</item>
     <item name="purple" type="color">#aa5353cc</item>
     <item name="white" type="color">#ffffff</item>
+    <item name="primary" type="color">@color/twitterBlue</item>
+    <item name="primaryDark" type="color">#0288D1</item>
+    <item name="colorAccent" type="color">#536DFE</item>
 </resources>
