--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -16,9 +16,27 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:paddingStart="4dp"
+            android:elevation="4dp"
+            android:src="@drawable/ic_home_white_48dp"/>
+
+        <ImageView
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:layout_centerInParent="true"
             android:src="@drawable/ic_twitter_logo_white" />
+
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:paddingEnd="4dp"
+            android:elevation="4dp"
+            android:src="@drawable/ic_person_white_48dp"/>
     </RelativeLayout>
 </android.support.v7.widget.Toolbar>
